change red to orange

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
 
-    <h1 id="HW" style="color:red">
+    <h1 id="HW" style="color:orange">
       Hello World! Please click me!
     </h1>
 
